[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "x-dub"
version = "0.1.0"
description = "UV-managed CUDA environment for X-Dub lip-sync inference."
requires-python = "==3.10.*"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "diffusers==0.36.0",
    "transformers==5.1.0",
    "safetensors==0.7.0",
    "sentencepiece==0.2.1",
    "protobuf==6.33.5",
    "modelscope==1.34.0",
    "huggingface-hub==1.4.1",
    "ftfy==6.3.1",
    "pandas==2.3.3",
    "imageio==2.37.2",
    "imageio-ffmpeg==0.6.0",
    "ffmpeg-python==0.2.0",
    "einops==0.8.2",
    "numpy==1.26.4",
    "scipy==1.15.3",
    "pillow==12.1.0",
    "tqdm==4.67.3",
    "regex==2026.1.15",
    "opencv-python==4.10.0.84",
    "setuptools<81",
    "typing-extensions==4.15.0",
    "matplotlib>=3.9,<4",
    "ninja>=1.11,<2",
    "mmengine==0.10.7",
    "mmcv==2.1.0",
    "mmdet==3.2.0",
    "mmpose==1.3.2",
]

[tool.uv]
package = false
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
build-constraint-dependencies = ["setuptools<81"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
nvidia-cublas-cu12 = { index = "pytorch-cu128" }
nvidia-cuda-cupti-cu12 = { index = "pytorch-cu128" }
nvidia-cuda-nvrtc-cu12 = { index = "pytorch-cu128" }
nvidia-cuda-runtime-cu12 = { index = "pytorch-cu128" }
nvidia-cudnn-cu12 = { index = "pytorch-cu128" }
nvidia-cufft-cu12 = { index = "pytorch-cu128" }
nvidia-cufile-cu12 = { index = "pytorch-cu128" }
nvidia-curand-cu12 = { index = "pytorch-cu128" }
nvidia-cusolver-cu12 = { index = "pytorch-cu128" }
nvidia-cusparse-cu12 = { index = "pytorch-cu128" }
nvidia-cusparselt-cu12 = { index = "pytorch-cu128" }
nvidia-nccl-cu12 = { index = "pytorch-cu128" }
nvidia-nvjitlink-cu12 = { index = "pytorch-cu128" }
nvidia-nvtx-cu12 = { index = "pytorch-cu128" }
pytorch-triton = { index = "pytorch-cu128" }

[tool.uv.extra-build-dependencies]
chumpy = ["pip"]
mmcv = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
mmcv = { MMCV_WITH_OPS = "1" }
